--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset = "utf-8">
-<p>青：エディオン、赤：ヤマダデンキ、オレンジ：ケーズデンキ、紫：イオンモバイル、緑：パソコン工房、紺色、マツヤデンキ、白：マーキュリーオフィス</p>
+<p>青：エディオン、赤：ヤマダデンキ、オレンジ：ケーズデンキ、紫：イオンモバイル、緑：パソコン工房、紺色：マツヤデンキ、白：マーキュリーオフィス</p>
 <html>
 <head>
     
